# bd-archiver

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  bd-archive.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docs/plans/: 2026-05-11-merge-estimate-into-create.md
docs/superpowers/plans/: 2026-05-08-disc-capacity-detection.md  2026-05-11-extract-read-disc-once.md  2026-05-12-incremental-phase1-catalog-policy.md
docs/superpowers/specs/: 2026-05-08-disc-capacity-detection-design.md  2026-05-12-incremental-backups-design.md
src/bd_archive/: __init__.py  __main__.py  _par2_helper.py  _swap_helper.py  cli.py  constants.py
src/bd_archive/archive/: checksums.py  config.py  dar_archive.py  disc.py  sizing.py  source_scan.py  verify.py
src/bd_archive/commands/: burn.py  create.py  estimate.py  extract.py  verify.py
src/bd_archive/shell/: deps.py  format.py  runner.py
src/bd_archive/tools/: dar.py  eject.py  growisofs.py  lsof.py  mediainfo.py  mkisofs.py  mount.py  optical.py  par2.py  udisks.py  xorriso.py
src/bd_archive/ui/: keypress.py  logger.py  progress.py  prompts.py
