[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bd-archive"
dynamic = ["version"]
description = "Archive data to Blu-ray discs with dar + par2"
requires-python = ">=3.11"
dependencies = ["argcomplete>=3.0"]

[project.scripts]
bd-archive = "bd_archive.cli:main"

[project.optional-dependencies]
dev = ["ruff>=0.4", "pre-commit>=3.7"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/bd_archive/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bd_archive"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
